arches_her/media/css/branding.css
/* ... */
.landing-page .navbar-collapse.collapse.in li a {
    line-height: 20px;
}

.landing-page .navbar-collapse.collapse.in .navbar-nav {
    margin: 0;
}

.landing-page ul.nav li a {
    font-size: 1.6rem!important;
}

/* Header - End */

/* Landing Page - Start */

.landing-page .navbar,
.landing-page .navbar .container,
.landing-page .navbar .navbar-header {
    min-height: 80px;
}

.landing-page .navbar-toggle {
    margin: 23px 15px 0;
    padding: 0;
}

.landing-page .navbar-header .icon-bar {
    background: #2579A4;
}

.landing-page .navbar-collapse {
    padding: 0;
}

.landing-page h1 {
    font-size: 4.8rem;
    color: #555555;
}

.landing-page h2 {
    font-size: 3.4rem;
    margin-bottom: 20px;
    color: #555555;
}

.landing-page h3 {
    font-size: 2.8rem;
    margin-bottom: 20px;
    color: #555555;
}

.landing-page li {
    font-size: 1.8rem;
}

.landing-page .caption {
    padding: 20px 17px 20px 20px;
    font-size: 2.1rem;
}

.landing-page video {
    width: 100%;
    min-width: 300px;
    border-radius: 10px;
}

.landing-page .img-rounded {
    border-radius: 10px;
}

/* Landing Page - End */

/* Featuretttes - Start*/

.row.featurette6-row .caption {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.row.featurette6-row .caption p {
    font-size: 0.6em;
}

.featurette-image-block {
    box-shadow: 0px 3px 6px #00000029;
    max-width: 424px;
    padding: 0;
    display: inline-block;
}

.featurette6-mid-block {
    margin: 0 20px;
}

.featurette1-left-container,
.featurette1-right-container {
    padding: 0;
}

.featurette1-left-container {
    width: 444px;
    position: absolute;
    left: 0;
    top: 132px;
    border-radius: 10px;
    background-color: #fff;
    padding: 0 20px 0 0;
}

.featurette1-right-container {
    width: 1090px;
}

.row.featurette1 {
    margin-left: inherit;
    margin-right: inherit;
    position: relative;
}

.featurette1 h1 {
    margin-top: 30px;
}

.featurette1 p {
    font-size: 2.2rem;
}

.row.featurette2 {
    margin: 50px auto 0 auto;
    border-top: 1px solid #707070;
    border-bottom: 1px solid #707070;
}

.row.featurette2,
.row.featurette3,
.row.featurette4,
.row.featurette5,
.row.featurette6,
.row.featurette7 {
    max-width: 646px;
}

.featurette2 ol {
    -moz-column-count: 2;
    -moz-column-gap: 20px;
    -webkit-column-count: 2;
    -webkit-column-gap: 20px;
    column-count: 2;
    column-gap: 20px;
}

.row.featurette3,
.row.featurette4,
.row.featurette5,
.row.featurette6,
.row.featurette7 {
    margin: 50px auto 0 auto;
}

.featurette3 .subtitle {
    font-size: 2.2rem;
}

.featurette3-row,
.featurette4-row {
    margin-left: -113px;
    margin-right: -113px;
    margin-top: 30px;
}

.featurette3-first-block {
    margin-right: 20px;
}

.featurette4-row {
    margin-bottom: 20px;
}

.featurette6-row {
    margin-left: -336px;
    margin-right: -336px;
    margin-top: 30px;
}

.featurette7 .jumbotron {
    padding: 22px 20px 0px 20px;
    background: #F9F7F6;
}

.featurette7 h3 {
    margin-top: 0;
}

.featurette7 .contact-icon,
.featurette7 .contact-details {
    display: inline-block;
}

.featurette7 .contact-icon {
    vertical-align: top;
    margin-right: 10px;
}

.featurette7 .contact-details {
    margin-bottom: 20px;
    padding-left: 5px;
}

.featurette7 .jumbotron p {
    margin-bottom: 0;
}

.featurette7 .jumbotron .btn {
    margin-left: 35px;
}

/* Featurettes - End */

/* Footer - Start */

.landing-page footer {
    margin-top: 80px;
}

.landing-page footer p,
.landing-page footer a {
    color: #fff;
    font-size: 1.8rem;
}

.landing-page footer a {
    margin-right: 25px;
}

.landing-page .footer-top {
    min-height: 266px;
    background: #404040;
    padding-top: 46px;
}

.landing-page .footer-bottom {
    min-height: 60px;
    background: #2A2A2A;
}

.landing-page .footer-bottom .footer-container {
    min-height: 60px;
    padding-top: 15px;
}

.landing-page footer .copyright {
    text-align: right;
}

.landing-page footer .footer-he-logo,
.landing-page footer .footer-getty-logo,
.landing-page footer .footer-arches-logo {
    max-height: 40px;
    width: auto;
}

.landing-page .footer-top-first-row {
    margin-bottom: 30px;
}

.landing-page .glaas-title {
    font-size: 2.8rem;
}

.landing-page .footer-top-contact-details p,
.landing-page .footer-top-contact-details a {
    font-size: 1.6rem;
}

.landing-page .footer-top-contact-details a {
    text-decoration: underline;
}

.landing-page .footer-links a {
    white-space: nowrap;
    text-decoration: underline;
}

/* Footer - End */

/* Media Queries - Start */

@media screen and (max-width: 768px) {
    .landing-page header {
        height: 60px;
        box-shadow: none;
        border-bottom: 1px solid #d4d4d4;
    }

    .landing-page .header-bar__logo {
        padding: 13px 20px;
    }

    .landing-page .header-bar__logo-image {
        width: 150px;
    }

    .landing-page .navbar-brand {
        height: 60px;
        padding: 12px 15px;
    }

    .landing-page .navbar,
    .landing-page .navbar .container,
    .landing-page .navbar .navbar-header {
        min-height: 60px;
    }

    .landing-page footer .copyright {
        text-align: left;
    }
}

@media screen and (min-width: 768px) {
    .mobile-menu-sign-in {
        display: none!important;
    }
}

@media screen and (max-width: 1000px) {
    .landing-page .navbar-nav>li>a {
        padding-left: 8px;
        padding-right: 8px;
        font-size: 1.6rem;
    }

    .landing-page ul.nav li a {
        font-size: 1.3rem!important;
    }
}
/* ... */

